# casual-serious-language

./: .gitignore  Cargo.toml  README.md  build-site.sh  syntax.md
.github/workflows/: publish.yml
csl-cli/: Cargo.toml  README.md
csl-cli/src/: cli.rs
csl-core/: Cargo.toml  README.md
csl-core/src/: a10_lexer.rs  a15_token.rs  a20_parser.rs  a21_parser_err.rs  a25_ast.rs  a29_symbol_table.rs  a30_build_mir.rs  a31_build_mir_err.rs  a34_types.rs  a35_mir.rs  a36_intrinsics.rs  a40_interpret.rs  a41_runtime_err.rs  a45_runtime_value.rs  b04_pos.rs  b05_span.rs  b10_errors.rs  lib.rs  test_helpers.rs
csl-web/: Cargo.toml  README.md
csl-web/src/: lib.rs
docs/: SYNTAX.md
js/: csl_web.js  csl_web_bg.wasm  main.js  main.js.map
public-docs/: syntax.md
scripts/: build-site.sh  update-snapshots.sh
site/: esbuild.mjs  package-lock.json  package.json  tsconfig.json
site/public/: index.html
site/src/: csl_web.d.ts  examples.ts  main.ts
src/: a10_lexer.rs  a15_token.rs  a20_parser.rs  a21_parser_err.rs  a25_ast.rs  a30_build_mir.rs  a30_frontend.rs  a31_build_mir_err.rs  a34_types.rs  a35_mir.rs  a36_intrinsics.rs  a40_interpret.rs  a41_runtime_err.rs  a45_runtime_value.rs  b04_pos.rs  b05_span.rs  b10_errors.rs  cli.rs  lib.rs
