[package]
name = "casual_serious_language"
version = "0.1.0"
edition = "2021"
authors = ["Jared Hughes <jahughes241@gmail.com>"]
description = """
A casual attempt at a serious programming language. (Compiler crate)
"""
documentation = "https://github.com/jared-hughes/casual-serious-language"
homepage = "https://github.com/jared-hughes/casual-serious-language"
repository = "https://github.com/jared-hughes/casual-serious-language"
license = "MIT"
categories = ["compilers", "command-line-utilities"]

[lib]
name = "casual_serious_language"

[dependencies]
index_vec = {workspace = true}
mutants = {workspace = true}

[dev-dependencies]
expect-test = {workspace = true}
