[package]
name = "csl_web"
version = "0.1.0"
edition = "2021"
authors = ["Jared Hughes <jahughes241@gmail.com>"]
description = """
A casual attempt at a serious programming language. (Web bindings)
"""
documentation = "https://github.com/jared-hughes/casual-serious-language"
homepage = "https://github.com/jared-hughes/casual-serious-language"
repository = "https://github.com/jared-hughes/casual-serious-language"
license = "MIT"
categories = ["compilers"]

[lib]
name = "csl_web"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.casual_serious_language]
path = "../csl-core"
version = "0.1.0"
